infra/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frontend-k8s.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
  - host: staging.wallfair.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-main
              port:
                number: 80
